# Intelligent-Cafeteria-Self-Check-out

./: 123  CMakeLists.txt  Gantt chart.xlsx  LICENSE  README.md  account_database.csv  main.cpp  pic.qrc  ui.h  widget.cpp  widget.h  widget.ui
Qt/: README.md  camera.cpp  camera.h  dish.cpp  dish.h  eProject.pro  widget.cpp  widget.h  widget.ui
Qt/build-eProject-Desktop_Qt_5_12_11_MinGW_32_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  account_database.csv  ui_widget.h
Qt/build-eProject-Desktop_Qt_5_12_11_MinGW_32_bit-Release/release/: moc_widget.cpp  qrc_pic.cpp
Qt/eProject/: eProject.pro  eProject.pro.user.5d025b1  widget.cpp  widget.h  widget.ui
Qt/icsc/: README.md  facerecognizer.cpp  facerecognizer.h  icsc.pro  icsc.pro.user.31bb304  icsc.pro.user.5d025b1.22  main.cpp  widget.cpp
Qt/icsc_v2/: CMakeLists.txt  facerecognition.cpp  facerecognition.h  icsc.pro  widget.cpp  widget.h
Qt/icsc_v3.1/: facerecognition.cpp  facerecognition.h  icsc.pro  widget.cpp  widget.h
Qt/ui_test/: CMakeLists.txt  widget.h
cameraDriver/: cameraDriver.cpp  cameraDriver.h  test.cpp
faceCamera/: Driver.cpp  cameraDriver.cpp  cameraDriver.h  test  test.cpp
face_recognition/: Makefile  recognize  recognizer.cpp  train  train.cpp
face_recognition v1.0/: recognizer.cpp
face_recognition v1.1/: train  train.cpp
face_recognition/recognizer/: embeddings.xml  labels.txt
face_recognition/test_rec/: CMakeLists.txt  test_recognizer.cpp
face_recognition/test_train/: CMakeLists.txt  test_trainer.cpp
ncnn/examples/: CMakeLists.txt  yolov5_lite_s.cpp
yolov5_lite_s/: s.param  yolov5_lite_s.cpp  yolov5_lite_s.h
